# llmforge

./: .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  publish.yml  pull_request.yml  release.yml  update-contributors.yml
benchmarks/: server_benchmark.py
docs/: acknowledgements.md  code-of-conduct.md  contributing.md  examples.md  index.md  installation.md  license.md  quickstart.md
docs/advanced/: fine_tuning.md  quantization.md  server.md
docs/api/: base_engine.md  inference.md  rl_engine.md  utils.md
docs/guides/: chat.md  inference.md  memory.md  rl_engine.md
docs/includes/: contributors.md
docs/stylesheets/: extra.css
llmforge/: BENCHMARKS.md  LEARNED_QUANTS.md  LORA.md  MANAGE.md  README.md  SERVER.md  __init__.py  base_engine.py  benchmark.py  cache_prompt.py  chat.py  cli.py  convert.py  distributed.py  evaluate.py  fuse.py  generate.py  gguf.py  inference.py  lora.py  manage.py  memory.py  offload.py  ops.py  perplexity.py  quant_module.py  rl.py  sample_utils.py  server.py  sharding.py  share.py  tensor_parallel.py  tokenizer_utils.py  utils.py
llmforge/examples/: batch_generate_response.py  chat.py  generate_response.py  openai_tool_use.py  sharded_generate.py  tool_use.py
llmforge/models/: Klear.py  activations.py  afm7.py  afmoe.py  apertus.py  baichuan_m1.py  bailing_moe.py  bailing_moe_linear.py  base.py  bitlinear_layers.py  bitnet.py  cache.py  cohere.py  cohere2.py  dbrx.py  deepseek.py  deepseek_v2.py  deepseek_v3.py  deepseek_v32.py  dots1.py  ernie4_5.py  ernie4_5_moe.py  exaone.py  exaone4.py  exaone_moe.py  falcon_h1.py  gated_delta.py  gemma.py  gemma2.py  gemma3.py  gemma3_text.py  gemma3n.py  glm.py  glm4.py  glm4_moe.py  glm4_moe_lite.py  gpt2.py  gpt_bigcode.py  gpt_neox.py  gpt_oss.py  (+75 more)
llmforge/quant/: awq.py  dwq.py  dynamic_quant.py  gptq.py  (+1 more)
scripts/: generate_contributors.py
tests/: model_parallel_tests.py  quick_run.py  test_chat.py  test_datsets.py  test_devices.py  test_engine.py  test_evaluate.py  test_finetune.py  test_generate.py  test_gguf.py  test_losses.py  test_models.py  test_prompt_cache.py  test_quant_offload.py  test_rl.py  test_sample_utils.py  test_server.py  test_tokenizers.py  test_tool_parsing.py  test_transformers.py  test_tuner_trainer.py  test_tuner_utils.py  test_utils.py
(+6 files in other folders)
