[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmforge"
version = "0.1.0"
description = "LLM Inference and RL Self-Improvement Engine - Built on PyTorch"
readme = "README.md"
license = {text = "LLMForge Commercial License"}
requires-python = ">=3.8"
authors = [
    {name = "ZandrixAI"},
]
keywords = [
    "llm",
    "pytorch",
    "inference",
    "reinforcement-learning",
    "text-generation",
    "huggingface",
    "quantization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
test = [
    "datasets>=2.14.0",
    "lm-eval>=0.4.0",
    "pytest>=7.4.0",
]
train = [
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "accelerate>=0.25.0",
]
evaluate = [
    "lm-eval>=0.4.0",
    "tqdm>=4.66.0",
]
dev = [
    "datasets>=2.14.0",
    "lm-eval>=0.4.0",
    "pytest>=7.4.0",
    "tqdm>=4.66.0",
    "accelerate>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/ZandrixAI/llmforge"
Documentation = "https://ZandrixAI.github.io/llmforge/"
Repository = "https://github.com/ZandrixAI/llmforge"
Issues = "https://github.com/ZandrixAI/llmforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmforge*"]

[tool.setuptools.package-data]
llmforge = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
